ipc/ipdl/test/ipdl/ok/PsyncProtocol.ipdl
[ChildProc=any]
sync protocol PsyncProtocol {

    // sanity check of sync protocols

child:
    async AsyncMsg();

parent:
    sync SyncMsg() returns (int i);

};
