ipc/ipdl/test/ipdl/error/SyncPrio.ipdl
//error: non-async message `NormalPrio' cannot specify [ReplyPriority]
sync protocol SyncPrio
{
child:
  [ReplyPriority=normal] sync NormalPrio() returns (bool aValue);
};
